--- a/app/views/admin/posts/_form.html.slim
+++ b/app/views/admin/posts/_form.html.slim
@@ -14,6 +14,7 @@
         .controls
           = f.text_field :published_at, :class => 'span12'
 
+  fieldset
     .control-group
       = f.label :body, :class => 'control-label'
       .controls
