--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -2,7 +2,7 @@ doctype html
 
 html
   head
-    title = t('common.cms')
+    title #{t('common.cms')} - Rezvanov.info
 
     = javascript_include_tag :admin
     = stylesheet_link_tag :admin
