--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 
 html{lang='#{I18n.locale}'}
   head
-    title = yield(:title)
+    title #{yield(:title)} - Rezvanov.info
     
     link{rel='shortcut icon' href='/favicon.ico'}
     link{href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'}
