--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html{lang='#{I18n.locale}'}
     link{href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'}
 
     = javascript_include_tag :application
+    = javascript_include_tag(:rconsole) if Rails.env.development?
     = stylesheet_link_tag :application
     = csrf_meta_tag
 
