--- a/app/assets/stylesheets/pages/posts.css.scss
+++ b/app/assets/stylesheets/pages/posts.css.scss
@@ -11,23 +11,26 @@
     }
     > .body {
       margin-top: 30px;
+      img {
+        display: block;
+        max-width: 600px;
+        margin: 30px auto;
+      }
       > h2 {
         font-size: 1em;
         margin: 30px 0;
       }
       > p {
-        margin: 10px 0 0 0;
+        margin: 30px 0 0 0;
+        &:first-child {
+          img {
+            float: right;
+            margin: 0 0 1em 1em;
+          }
+        }
       }
       > ol {
         margin: 10px 0 0 45px;
-      }
-      img {
-        display: block;
-        margin: 30px 0 30px 0;
-        &:first-child {
-          float: right;
-          margin: 0 0 4px 10px;
-        }
       }
     }
   }
