--- a/app/views/admin/projects/index.html.slim
+++ b/app/views/admin/projects/index.html.slim
@@ -1,4 +1,4 @@
-= link_to t('.new_project'), new_admin_project_path, :class => 'btn btn-success'
+= link_to t('.new_project'), new_admin_project_path, class: 'btn btn-success'
 
 table.table
   thead
@@ -14,7 +14,7 @@ table.table
         td = p.production_url
         td = Russian::strftime p.created_at, '%d %B %Y'
         td.actions
-          = link_to t('.edit'), edit_admin_project_path(p.id), :class => 'btn'
+          = link_to t('.edit'), edit_admin_project_path(p.id), class: 'btn'
           | &nbsp;
-          = link_to t('.delete'), admin_project_path(p.id), :method => :delete,
-                    :confirm => I18n.t('messages.really?'), :class => 'btn btn-danger'
+          = link_to t('.delete'), admin_project_path(p.id), method: :delete,
+                    confirm: I18n.t('messages.really?'), class: 'btn btn-danger'
