--- a/app/views/shared/_modal.html.slim
+++ b/app/views/shared/_modal.html.slim
@@ -1,5 +1,5 @@
 .component-modal
   .window
-    = link_to 'x', '#', :class => 'close js-close-modal'
+    = link_to 'x', '#', class: 'close js-close-modal'
     .title
     .body
