--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -10,24 +10,24 @@ html
 
     = yield :head
 body
-  = render 'shared/flash', :flash => flash.discard
+  = render 'shared/flash', flash: flash.discard
   
   .layout
     .navbar
       .navbar-inner
         .container-fluid
           .navbar-text.pull-right
-            = link_to t('.home'), root_path, :class => 'navbar-link'
-            = link_to t('common.logout'), logout_path, :method => :delete,
-                      :class => 'navbar-link'
+            = link_to t('.home'), root_path, class: 'navbar-link'
+            = link_to t('common.logout'), logout_path, method: :delete,
+                      class: 'navbar-link'
           
           .brand = t('common.cms')
           
           .nav-collapse.collapse
             ul.nav
-              li{class='#{'active' if request.path.starts_with?(admin_posts_path)}'}
+              li class=('active' if request.path.starts_with?(admin_posts_path))
                 = link_to t('common.posts'), admin_posts_path
-              li{class='#{'active' if request.path.starts_with?(admin_projects_path)}'}
+              li class=('active' if request.path.starts_with?(admin_projects_path))
                 = link_to t('common.projects'), admin_projects_path
 
     .content.container-fluid
