--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -32,15 +32,15 @@ html{lang='#{I18n.locale}'}
     = yield :head
 
   body
-    = render 'shared/flash', :flash => flash.discard
+    = render 'shared/flash', flash: flash.discard
     = render 'shared/modal'
 
     .auth
       - if current_user
         = link_to t('common.cms'), admin_posts_path
-        = link_to t('common.logout'), logout_path, :method => :delete
+        = link_to t('common.logout'), logout_path, method: :delete
       - else
-        = link_to t('.login'), login_path, :class => 'js-in-modal', :data => {:title => 'Вход'}
+        = link_to t('.login'), login_path, class: 'js-in-modal', data: {title: 'Вход'}
     
     .layout
       .logo
