--- a/app/views/layouts/login.html.slim
+++ b/app/views/layouts/login.html.slim
@@ -12,7 +12,7 @@ html{lang='#{I18n.locale}'}
     = csrf_meta_tag
 
   body
-    = render 'shared/flash', :flash => flash.discard
+    = render 'shared/flash', flash: flash.discard
     .layout
       .content
         .logo
