--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -5,7 +5,7 @@
     h2.title = t('common.projects')
     - @projects.each do |p|
       .item
-        = link_to format_project_url(p.production_url), p.production_url, :target => '_blank'
+        = link_to format_project_url(p.production_url), p.production_url, target: '_blank'
         | &nbsp;
         = p.description
 
