Install and setup EpicEditor

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,4 +1,14 @@
+/*
+ *= require components/flash
+ */
+
 @import "bootstrap";
+
+#epiceditor {
+  + #epiceditora {
+    display: none;
+  }
+}
 
 .layout {
   .navbar-inner {
